[project]
authors = [{name = "dnth", email = "dickson.neoh@gmail.com"}]
name = "ytdlp_gradio"
requires-python = ">= 3.10, < 3.13"
version = "0.1.0"
dependencies = [ "yt-dlp>=2025.2.19,<2026", "gradio>=5.20.0,<6"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
ytdlp_gradio = { path = ".", editable = true }

[tool.pixi.tasks]
start = "python -m src.ytdlp_gradio.app"

[tool.pixi.dependencies]
ffmpeg = ">=7.1.0,<8"
